feat: hyprland config enhancements

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,5 @@
 # Monitors
-monitor=DP-1,highrr,0x0,1
-# monitor=DP-1,vrr,0x0,1
+monitor=DP-1,highrr,0x0,1,vrr,1
 monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
 
@@ -9,8 +8,8 @@ workspace=name:1, monitor:DP-1, persistent:true, default:true
 workspace=name:2, monitor:DP-1, persistent:true
 workspace=name:3, monitor:DP-1, persistent:true
 workspace=name:4, monitor:DP-1, persistent:true
-workspace=name:right-monitor, monitor:HDMI2-A-1, persistent:true
-workspace=name:top-monitor, monitor:DP-2, persistent:true
+workspace=name:right-monitor, monitor:HDMI2-A-1, default:true, persistent:true
+workspace=name:top-monitor, monitor:DP-2, default:true, persistent:true
 
 # Startup applications
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -27,6 +26,7 @@ exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 
 # Environment variables
 env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORM,wayland
 env = WLR_NO_HARDWARE_CURSORS,1
 env = MOZ_ENABLE_WAYLAND,1
 env = WLR_DRM_NO_ATOMIC,1
@@ -115,25 +115,15 @@ gestures {
 }
 
 # Window Rules
-# windowrulev2 = center class:(org.kde.krunner)
-#
-# windowrulev2 = forceinput,class:(org.kde.krunner)
-# windofloat 2560 1380,title:^(waybar)
 windowrulev2 = float,title:^(waybar)
 windowrulev2 = noborder,title:^(waybar)
 
-# windowrulev2 = stayfocused,class:(albert)
-# windowrulev2 = fakefullscreen,class:(albert)
-# windowrulev2 = maximize,class:(albert)
-windowrulev2 = stayfocused,class:(albert)
-windowrulev2 = windowdance,class:(albert)
-windowrulev2 = noborder,class:(albert)
-windowrulev2 = center,class:(albert)
-# windowrulev2 = float,title:private
-# windowrulev2 = noblur,class:(albert)
-windowrulev2 = float,class:(albert)
+# Move Google Meet to Vertical Monitor and Tile
+windowrulev2 = tile,title:^(Google Meet)
+windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
 layerrule = blur,waybar
+layerrule = blur,wofi
 
 # Keybinds
 $mainMod = SUPER
