refactor: hyprland config for nvidia + sww for wallpapers

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # Monitors
-monitor=DP-1,highrr,0x0,1,vrr,1
+# monitor=DP-1,highrr,0x0,1,vrr,1
+monitor=DP-1,highrr,0x0,1
 monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
 
@@ -8,7 +9,7 @@ workspace=name:1, monitor:DP-1, persistent:true, default:true
 workspace=name:2, monitor:DP-1, persistent:true
 workspace=name:3, monitor:DP-1, persistent:true
 workspace=name:4, monitor:DP-1, persistent:true
-workspace=name:right-monitor, monitor:HDMI2-A-1, default:true, persistent:true
+workspace=name:right-monitor, monitor:HDMI-A-1, default:true, persistent:true
 workspace=name:top-monitor, monitor:DP-2, default:true, persistent:true
 
 # Startup applications
@@ -17,24 +18,50 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=swayidle -w
 exec-once=dunst
 exec-once=waybar
-exec-once=hyprpaper
+exec-once=swww init && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
 exec-once=streamdeck --no-ui
+exec-once=hyprctl dispatch workspace 1
 exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 
 # Import Configurations
 # source = ~/.config/hypr/colors.conf
 
 # Environment variables
+
+# Cursor
 env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORM,wayland
 env = WLR_NO_HARDWARE_CURSORS,1
+
+# SSH
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+
+# Theming
+env = GTK_THEME,adw-gtk3-dark
+
+# Wayland
+# NEW
+env = GDK_BACKEND,wayland,x11
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+env = MOZ_DISABLE_RDD_SANDBOX,1
+env = _JAVA_AWT_WM_NONREPARENTING=1
+env = PROTON_ENABLE_NGX_UPDATER,1
+env = NVD_BACKEND,direct
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,1
+env = WLR_USE_LIBINPUT,1
+env = WLR_RENDERER_ALLOW_SOFTWARE,1
+# END NEW
+
+env = QT_QPA_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = WLR_DRM_NO_ATOMIC,1
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+# DISABLED BECAUSE OF CURRENT DRIVER BUG
+#env = GBM_BACKEND,nvidia-drm
 
 # Input Configuration
 input {
@@ -53,6 +80,10 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
+
+misc {
+  no_direct_scanout = false
 }
 
 # General Configuration
@@ -122,6 +153,9 @@ windowrulev2 = noborder,title:^(waybar)
 windowrulev2 = tile,title:^(Google Meet)
 windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
+# Move Spotify to Top Monitor
+windowrulev2 = monitor DP-2,title:^(Spotify)$
+
 layerrule = blur,waybar
 layerrule = blur,wofi
 
@@ -131,7 +165,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exec, wlogout --protocol layer-shell
-bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color 1f2430 --key-hl-color e95420 --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --grace 2 --fade-in 0.2
+bind = $mainMod, L, exec, ~/.dotfiles/scripts/lock.sh
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, F, togglefloating, 
 bind = ALT, Space, exec, wofi
