chore: fix formatting for waybar config

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,181 +1,232 @@
 {
-    "output": "DP-1",
-    "layer": "top",
-    "spacing": 8,
-    "position": "bottom",
-    "height": 32,
-    "gtk-layer-shell": true,
-    "modules-left": ["hyprland/workspaces", "cava", "custom/media"],
-    "modules-center": ["wlr/taskbar"],
-    "modules-right": ["keyboard-state", "tray", "idle_inhibitor", "custom/weather", "battery", "battery#charging", "pulseaudio", "network", "clock"],
-    "hyprland/workspaces": {
-      "all-outputs": false,
-      "format": "{icon}",
-      "format-icons": {
-        "active": "",
-        "default": ""
-      },
-      "persistent-workspaces": {
-        "1": ["DP-1"],
-        "2": ["DP-1"],
-        "3": ["DP-1"],
-        "4": ["DP-1"]
-      }
+  "output": "DP-1",
+  "layer": "top",
+  "spacing": 8,
+  "position": "bottom",
+  "height": 32,
+  "gtk-layer-shell": true,
+  "modules-left": [
+    "hyprland/workspaces",
+    "cava",
+    "custom/media"
+  ],
+  "modules-center": [
+    "wlr/taskbar"
+  ],
+  "modules-right": [
+    "keyboard-state",
+    "tray",
+    "idle_inhibitor",
+    "custom/weather",
+    "battery",
+    "battery#charging",
+    "pulseaudio",
+    "network",
+    "clock"
+  ],
+  "hyprland/workspaces": {
+    "all-outputs": false,
+    "format": "{icon}",
+    "format-icons": {
+      "active": "",
+      "default": ""
     },
-    "keyboard-state": {
-        "numlock": false,
-        "capslock": true,
-        "format": "{icon}",
-        "format-icons": {
-            "locked": "<span font=\"Material Design Icons\"></span>",
-            "unlocked": ""
-        }
-    },
-    "cava": {
-        "framerate": 165,
-        "autosens": 1,
-        // "sensitivity": 100,
-        "bars": 14,
-        "lower_cutoff_freq": 50,
-        "higher_cutoff_freq": 10000,
-        "method": "pipewire",
-        "source": "auto",
-        "stereo": true,
-        "reverse": false,
-        "bar_delimiter": 0,
-        "monstercat": false,
-        "waves": false,
-        "noise_reduction": 0.77,
-        "input_delay": 2,
-        "format-icons" : ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█" ],
-        "actions": {
-          "on-click-right": "mode"
-        }
-    },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰅶</span>",
-            "deactivated": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰾫</span>"
-        }
-    },
-    "tray": {
-        "spacing": 8,
-        "icon-size": 16
-        // "show-passive-items": true
-    },
-    "clock": {
-        "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰙹</span> {:%A, %b %d %I:%M %p}",
-        "on-click": "xdg-open https://calendar.google.com",
-        "tooltip-format": "<tt><small>{calendar}</small></tt>",
-        "calendar": {
-            "mode"          : "month",
-            "mode-mon-col"  : 3,
-            "on-scroll"     : 1,
-            "on-click-right": "mode",
-            "format": {
-                "months":     "<span color='#ffead3'><b>{}</b></span>",
-                "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-                "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-                "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-                "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-            }
-        },
-        "actions":  {
-            "on-click-right": "mode",
-            "on-click-forward": "tz_up",
-            "on-click-backward": "tz_down",
-            "on-scroll-up": "shift_up",
-            "on-scroll-down": "shift_down"
-        }
-    },
-    "battery": {
-        "bat": "hidpp_battery_0",
-        "states": {
-            "full": 100,
-            "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰍽</span>{capacity}%",
-        "format-charging": "",
-        "format-plugged": "",
-        "format-alt": "{time} {icon}",
-        "format-good": "",
-        "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "battery#charging": {
-        "bat": "hidpp_battery_1",
-        "states": {
-            "full": 100,
-            "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "",
-        "format-charging": " {capacity}%",
-        "format-plugged": " {capacity}%",
-        "format-alt": "{time} {icon}",
-        "format-good": "",
-        "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "network": {
-        "format-wifi": "",
-        "format-ethernet": "<span font=\"Material Design Icons\" size='large' font_weight='normal'>󰈀</span>",
-        "tooltip-format": "{gwaddr} via {ifname}",
-        "format-linked": "{ifname} (No IP) 󰈀",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "󰈀 {ipaddr}/{cidr}"
-    },
-    "pulseaudio": {
-        "format": "{icon} {volume}% {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": "󰝟 {icon} {format_source}",
-        "format-muted": "󰝟{format_source}",
-        "format-source": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰍬</span>",
-        "format-source-muted": "󰍭",
-        "format-icons": {
-            "headphone": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰋋</span>",
-            "speaker": ["<span font=\"Material Design Icons\">󰕿</span>", "<span font=\"Material Design Icons\">󰖀</span>", "<span font=\"Material Design Icons\">󰕾</span>"]
-        },
-        "on-click": "pavucontrol",
-        "on-click-right": "helvum"
-    },
-    "custom/media": {
-        "format": "{icon}   {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.dotfiles/scripts/mediaplayer.py --player spotify 2> /dev/null"
-    },
-    "custom/weather": {
-        "format": "{}",
-        "format-alt": "{alt}: {}",
-        "format-alt-click": "click-right",
-        "interval": 1800,
-        "return-type": "json",
-        "exec": "$HOME/.dotfiles/scripts/weather.sh Columbus",
-        "exec-if": "ping wttr.in -c1"
-    },
-    "wlr/taskbar": {
-      "format": "{icon}",
-      "icon-size": 24,
-      "icon-theme": "Numix-Circle",
-      "tooltip-format": "{title}",
-      "on-click": "activate",
-      "on-click-middle": "close",
-      "app_ids-mapping": {
-        "firefoxdeveloperedition": "firefox-developer-edition"
-      },
-      "rewrite": {
-          "Firefox Web Browser": "Firefox",
-          "Foot Server": "Terminal"
-      }
+    "sort-by": "ID",
+    "persistent-workspaces": {
+      "1": [
+        "DP-1"
+      ],
+      "2": [
+        "DP-1"
+      ],
+      "3": [
+        "DP-1"
+      ],
+      "4": [
+        "DP-1"
+      ]
     }
+  },
+  "keyboard-state": {
+    "numlock": false,
+    "capslock": true,
+    "format": "{icon}",
+    "format-icons": {
+      "locked": "<span font=\"Material Design Icons\"></span>",
+      "unlocked": ""
+    }
+  },
+  "cava": {
+    "framerate": 165,
+    "autosens": 1,
+    // "sensitivity": 100,
+    "bars": 14,
+    "lower_cutoff_freq": 50,
+    "higher_cutoff_freq": 10000,
+    "method": "pipewire",
+    "source": "auto",
+    "stereo": true,
+    "reverse": false,
+    "bar_delimiter": 0,
+    "monstercat": false,
+    "waves": false,
+    "noise_reduction": 0.77,
+    "input_delay": 2,
+    "format-icons": [
+      "▁",
+      "▂",
+      "▃",
+      "▄",
+      "▅",
+      "▆",
+      "▇",
+      "█"
+    ],
+    "actions": {
+      "on-click-right": "mode"
+    }
+  },
+  "idle_inhibitor": {
+    "format": "{icon}",
+    "format-icons": {
+      "activated": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰅶</span>",
+      "deactivated": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰾫</span>"
+    }
+  },
+  "tray": {
+    "spacing": 8,
+    "icon-size": 16
+    // "show-passive-items": true
+  },
+  "clock": {
+    "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰙹</span> {:%A, %b %d %I:%M %p}",
+    "on-click": "xdg-open https://calendar.google.com",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "calendar": {
+      "mode": "month",
+      "mode-mon-col": 3,
+      "on-scroll": 1,
+      "on-click-right": "mode",
+      "format": {
+        "months": "<span color='#ffead3'><b>{}</b></span>",
+        "days": "<span color='#ecc6d9'><b>{}</b></span>",
+        "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+      }
+    },
+    "actions": {
+      "on-click-right": "mode",
+      "on-click-forward": "tz_up",
+      "on-click-backward": "tz_down",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down"
+    }
+  },
+  "battery": {
+    "bat": "hidpp_battery_0",
+    "states": {
+      "full": 100,
+      "good": 95,
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰍽</span>{capacity}%",
+    "format-charging": "",
+    "format-plugged": "",
+    "format-alt": "{time} {icon}",
+    "format-good": "",
+    "format-full": "",
+    "format-icons": [
+      "",
+      "",
+      "",
+      "",
+      ""
+    ]
+  },
+  "battery#charging": {
+    "bat": "hidpp_battery_1",
+    "states": {
+      "full": 100,
+      "good": 95,
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "",
+    "format-charging": " {capacity}%",
+    "format-plugged": " {capacity}%",
+    "format-alt": "{time} {icon}",
+    "format-good": "",
+    "format-full": "",
+    "format-icons": [
+      "",
+      "",
+      "",
+      "",
+      ""
+    ]
+  },
+  "network": {
+    "format-wifi": "",
+    "format-ethernet": "<span font=\"Material Design Icons\" size='large' font_weight='normal'>󰈀</span>",
+    "tooltip-format": "{gwaddr} via {ifname}",
+    "format-linked": "{ifname} (No IP) 󰈀",
+    "format-disconnected": "Disconnected ⚠",
+    "format-alt": "󰈀 {ipaddr}/{cidr}"
+  },
+  "pulseaudio": {
+    "format": "{icon} {volume}% {format_source}",
+    "format-bluetooth": "{volume}% {icon} {format_source}",
+    "format-bluetooth-muted": "󰝟 {icon} {format_source}",
+    "format-muted": "󰝟{format_source}",
+    "format-source": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰍬</span>",
+    "format-source-muted": "󰍭",
+    "format-icons": {
+      "headphone": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰋋</span>",
+      "speaker": [
+        "<span font=\"Material Design Icons\">󰕿</span>",
+        "<span font=\"Material Design Icons\">󰖀</span>",
+        "<span font=\"Material Design Icons\">󰕾</span>"
+      ]
+    },
+    "on-click": "pavucontrol",
+    "on-click-right": "helvum"
+  },
+  "custom/media": {
+    "format": "{icon}   {}",
+    "return-type": "json",
+    "max-length": 40,
+    "format-icons": {
+      "spotify": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰓇</span>",
+      "default": "🎜"
+    },
+    "escape": true,
+    "exec": "$HOME/.dotfiles/scripts/mediaplayer.py --player spotify 2> /dev/null"
+  },
+  "custom/weather": {
+    "format": "{}",
+    "format-alt": "{alt}: {}",
+    "format-alt-click": "click-right",
+    "interval": 1800,
+    "return-type": "json",
+    "exec": "$HOME/.dotfiles/scripts/weather.sh Columbus",
+    "exec-if": "ping wttr.in -c1"
+  },
+  "wlr/taskbar": {
+    "format": "{icon}",
+    "all-outputs": true,
+    "icon-size": 24,
+    "icon-theme": "Mint-L-Orange",
+    "tooltip-format": "{title}",
+    "on-click": "activate",
+    "on-click-middle": "close",
+    "app_ids-mapping": {
+      "firefoxdeveloperedition": "firefox-developer-edition"
+    },
+    "rewrite": {
+      "Firefox Web Browser": "Firefox",
+      "Foot Server": "Terminal"
+    }
+  }
 }
