fix: wofi entry outline css + use contains search instead of fuzzy

--- a/wofi/config
+++ b/wofi/config
@@ -2,7 +2,7 @@ show=drun
 allow_images=true
 allow_markup=true
 term=alacritty
-matching=fuzzy
+matching=contains
 width=800
 height=400
 always_parse_args=true
