--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,218 +1,25 @@
-# Monitors
-# monitor=DP-1,highrr,0x0,1,vrr,1
-monitor=DP-1,highrr,0x0,1
-monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
-monitor=DP-2,preferred,0x-1440,1
-
-# Workspaces
-workspace=name:1, monitor:DP-1, persistent:true, default:true
-workspace=name:2, monitor:DP-1, persistent:true
-workspace=name:3, monitor:DP-1, persistent:true
-workspace=name:4, monitor:DP-1, persistent:true
-workspace=name:right-monitor, monitor:HDMI-A-1, default:true, persistent:true
-workspace=name:top-monitor, monitor:DP-2, default:true, persistent:true
+# Host specific (desktop, laptop, etc)
+source = ~/.config/hypr/host.conf
 
 # Startup applications
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=swayidle -w
-exec-once=dunst
-exec-once=waybar
-exec-once=swww init && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
-exec-once=streamdeck --no-ui
-exec-once=hyprctl dispatch workspace 1
-exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
-
-# Import Configurations
-# source = ~/.config/hypr/colors.conf
+source = ~/.config/hypr/execs.conf
 
 # Environment variables
+source = ~/.config/hypr/env.conf
 
-# Cursor
-env = XCURSOR_SIZE,24
-env = WLR_NO_HARDWARE_CURSORS,1
+# General configuration
+source = ~/.config/hypr/general.conf
 
-# SSH
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+# Animations
+source = ~/.config/hypr/animations.conf
 
-# Theming
-env = GTK_THEME,adw-gtk3-dark
-
-# Wayland
-# NEW
-env = GDK_BACKEND,wayland,x11
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-env = MOZ_DISABLE_RDD_SANDBOX,1
-env = _JAVA_AWT_WM_NONREPARENTING=1
-env = PROTON_ENABLE_NGX_UPDATER,1
-env = NVD_BACKEND,direct
-env = __GL_GSYNC_ALLOWED,1
-env = __GL_VRR_ALLOWED,1
-env = WLR_USE_LIBINPUT,1
-env = WLR_RENDERER_ALLOW_SOFTWARE,1
-# END NEW
-
-env = QT_QPA_PLATFORM,wayland
-env = MOZ_ENABLE_WAYLAND,1
-env = WLR_DRM_NO_ATOMIC,1
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-# DISABLED BECAUSE OF CURRENT DRIVER BUG
-#env = GBM_BACKEND,nvidia-drm
-
-# Input Configuration
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 2
-    mouse_refocus = false
-    # follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-misc {
-  no_direct_scanout = false
-}
-
-# General Configuration
-general {
-    gaps_in = 4
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba(e95420ee) rgba(e9a320ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    layout = dwindle
-
-    allow_tearing = true
-}
-
-# Window Decorations
-decoration {
-    rounding = 10
-    
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-    }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-}
-
-# Global Animations
-animations {
-    enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default, fade
-}
-
-# Tiling Layout
-dwindle {
-    pseudotile = yes
-    preserve_split = yes
-}
-
-master {
-    new_is_master = true
-}
-
-gestures {
-    workspace_swipe = off
-}
-
-# Window Rules
+# Window rules
 windowrulev2 = float,title:^(waybar)
 windowrulev2 = noborder,title:^(waybar)
 
-# Move Google Meet to Vertical Monitor and Tile
-windowrulev2 = tile,title:^(Google Meet)
-windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
-
-# Move Spotify to Top Monitor
-windowrulev2 = monitor DP-2,title:^(Spotify)$
-
+# Layer rules
 layerrule = blur,waybar
 layerrule = blur,wofi
 
 # Keybinds
-$mainMod = SUPER
-
-bind = $mainMod, Return, exec, alacritty
-bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exec, wlogout --protocol layer-shell
-bind = $mainMod, L, exec, ~/.dotfiles/scripts/lock.sh
-bind = $mainMod, E, exec, nautilus
-bind = $mainMod, F, togglefloating, 
-bind = ALT, Space, exec, wofi
-# bind = ALT, Space, exec, krunner
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, O, togglesplit, # dwindle
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
-
-# Move focus with mainMod + Vim navigation
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# Move windows with Ctrl+Shift + Vim navigation
-bind = CTRLSHIFT, h, movewindow, l
-bind = CTRLSHIFT, l, movewindow, r
-bind = CTRLSHIFT, k, movewindow, u
-bind = CTRLSHIFT, j, movewindow, d
-
-# Resize windows with Vim navigation
-binde = $mainMod SHIFT, h, resizeactive, -20 0
-binde = $mainMod SHIFT, l, resizeactive, 20 0
-binde = $mainMod SHIFT, k, resizeactive, 0 -20
-binde = $mainMod SHIFT, j, resizeactive, 0 20
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Volume bindings
-bind = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+source = ~/.config/hypr/keybinds.conf
