chore: cleanup for nighthawk

--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -4,6 +4,9 @@ monitor=DP-1,highrr,0x0,1
 monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
 
+# Execs
+exec-once=streamdeck --no-ui
+
 # Workspaces
 workspace=name:1, monitor:DP-1, persistent:true, default:true
 workspace=name:2, monitor:DP-1, persistent:true
