feat: kdeconnect on nighthawk hyprland

--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -6,6 +6,7 @@ monitor=DP-2,preferred,0x-1440,1
 
 # Execs
 exec-once=streamdeck --no-ui
+exec-once=/usr/lib/kdeconnectd
 
 # NVIDIA
 env = _JAVA_AWT_WM_NONREPARENTING=1
