feat: desktop hyprland updates

--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -26,6 +26,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
+    allow_tearing = true
 }
 
 # Window Decorations
@@ -56,4 +57,8 @@ master {
 
 gestures {
     workspace_swipe = off
+}
+
+misc {
+    no_direct_scanout = false
 }
