--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -1,5 +1,4 @@
 # Monitors
-# monitor=DP-1,highrr,0x0,1,vrr,1
 monitor=DP-1,highrr,0x0,1
 monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
@@ -7,22 +6,7 @@ monitor=DP-2,preferred,0x-1440,1
 # Execs
 exec-once=streamdeck --no-ui
 exec-once=/usr/lib/kdeconnectd
-
-# NVIDIA
-env = _JAVA_AWT_WM_NONREPARENTING=1
-env = PROTON_ENABLE_NGX_UPDATER,1
-env = NVD_BACKEND,direct
-env = __GL_GSYNC_ALLOWED,1
-env = __GL_VRR_ALLOWED,1
-env = WLR_USE_LIBINPUT,1
-env = WLR_RENDERER_ALLOW_SOFTWARE,1
-env = QT_QPA_PLATFORM,wayland
-env = WLR_DRM_NO_ATOMIC,1
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# DISABLED BECAUSE OF CURRENT NVIDIA DRIVER BUG
-#env = GBM_BACKEND,nvidia-drm
+exec-once=gammastep -l 39.962:-82.996
 
 # Workspaces
 workspace=name:1, monitor:DP-1, persistent:true, default:true
@@ -38,11 +22,3 @@ windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
 # Move Spotify to Top Monitor
 windowrulev2 = monitor DP-2,title:^(Spotify)$
-
-general {
-    allow_tearing = true
-}
-
-misc {
-  no_direct_scanout = false
-}
