--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -1,9 +1,10 @@
 # Startup executables
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once=waybar
 exec-once=swayidle -w
 exec-once=dunst
-exec-once=waybar
 exec-once=swww init && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
+# exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
+# exec-once=vorta
 exec-once=hyprctl dispatch workspace 1
-exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
