--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -52,6 +52,6 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Volume bindings
-bind = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioRaiseVolume, exec, ~/.dotfiles/scripts/change_volume.sh increase
+bind = , XF86AudioLowerVolume, exec, ~/.dotfiles/scripts/change_volume.sh decrease
+bind = , XF86AudioMute, exec, ~/.dotfiles/scripts/change_volume.sh mute
