feat: misc hyprland improvements and configurations

--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -1,10 +1,10 @@
 # Startup executables
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=waybar
+exec-once=/usr/lib/pam_kwallet_init
 exec-once=swayidle -w
 exec-once=dunst
 exec-once=swww init && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
-# exec-once=QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
-# exec-once=vorta
+exec-once=kwalletd5 && ssh-add -q
+exec-once=sleep 5; QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 exec-once=hyprctl dispatch workspace 1
