--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -3,10 +3,12 @@ monitor=DP-1,highrr,0x0,1
 monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
 
-# Execs
-exec-once=streamdeck --no-ui
+# Execs (Startup applications)
 exec-once=/usr/lib/kdeconnectd
 exec-once=gammastep -l 39.962:-82.996
+exec-once=sleep 5; streamdeck --no-ui
+exec-once=sleep 5; vorta
+exec-once=sleep 5; notify
 
 # Workspaces
 workspace=name:1, monitor:DP-1, persistent:true, default:true
