--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -12,6 +12,7 @@ bind = ALT, Space, exec, wofi
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod SHIFT, I, exec, grim -o DP-1 | wl-copy
 
 # Move focus with mainMod + Vim navigation
 bind = $mainMod, h, movefocus, l
