--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -4,6 +4,8 @@ env = WLR_NO_HARDWARE_CURSORS,1
 
 # SSH
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+env = SSH_ASKPASS=/usr/bin/ksshaskpass
+env = SSH_ASKPASS_REQUIRE=prefer
 
 # Theming
 env = GTK_THEME,adw-gtk3-dark
