fix: change waybar icon sizing for tray

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -97,7 +97,7 @@
   },
   "tray": {
     "spacing": 8,
-    "icon-size": 16
+    "icon-size": 16,
     // "show-passive-items": true
   },
   "clock": {
