fix: edit a few execs and add some window rules to hyprland config

--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -61,4 +61,11 @@ gestures {
 
 misc {
     no_direct_scanout = false
+    # no_direct_scanout = true
+    vfr=false
+    vrr=2
+    # no_vfr=1
 }
+
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
