--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -4,11 +4,10 @@ monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
 monitor=DP-2,preferred,0x-1440,1
 
 # Execs (Startup applications)
-exec-once=/usr/lib/kdeconnectd
 exec-once=gammastep -l 39.962:-82.996
+exec-once=sleep 5; /usr/lib/kdeconnectd
 exec-once=sleep 5; streamdeck --no-ui
 exec-once=sleep 5; vorta
-exec-once=sleep 5; notify
 
 # Workspaces
 workspace=name:1, monitor:DP-1, persistent:true, default:true
@@ -24,3 +23,12 @@ windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
 # Move Spotify to Top Monitor
 windowrulev2 = monitor DP-2,title:^(Spotify)$
+
+# GW2 Burrito
+windowrulev2 = noblur,class:^(Burrito)$
+windowrulev2 = noborder,class:^(Burrito)$
+windowrulev2 = nofocus,class:^(Burrito)$
+# windowrulev2 = float,title:^(Burrito)$
+windowrulev2 = fakefullscreen,class:^(Burrito)$
+# windowrulev2 = maximize,title:^(Burrito)$
+# windowrulev2 = center 1,title:^(Burrito)$
