--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,3 +23,12 @@ layerrule = blur,wofi
 
 # Keybinds
 source = ~/.config/hypr/keybinds.conf
+
+# GW2 Burrito
+windowrulev2 = noblur,class:^(Burrito)$
+windowrulev2 = noborder,class:^(Burrito)$
+windowrulev2 = nofocus,class:^(Burrito)$
+windowrulev2 = float,title:^(Burrito)$
+windowrulev2 = fakefullscreen,class:^(Burrito)$
+# windowrulev2 = maximize,title:^(Burrito)$
+# windowrulev2 = center 1,title:^(Burrito)$
