feat: laptop hyprland config

--- a/hypr/host/voyager.conf
+++ b/hypr/host/voyager.conf
@@ -1,5 +1,6 @@
 # Monitors
-monitor=eDP-1,highres,0x0,2
+monitor=eDP-1,highres,0x0,1.75
+monitor=DP-1,highres,0x0,1
 
 # Workspaces
 workspace=name:1, monitor:eDP-1, persistent:true, default:true
@@ -8,3 +9,14 @@ workspace=name:3, monitor:eDP-1, persistent:true
 workspace=name:4, monitor:eDP-1, persistent:true
 
 env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+
+gestures {
+  workspace_swipe = true
+  workspace_swipe_fingers = 3
+}
+
+# Screen brightness
+bind = , XF86MonBrightnessUp, exec, brightnessctl -s +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl -s 5%-
+
+exec-once=gammastep -l 56.6:14.3
