feat: catch up voyager with nighthawk

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,7 @@ source = ~/.config/hypr/animations.conf
 # Window rules
 windowrulev2 = float,title:^(waybar)
 windowrulev2 = noborder,title:^(waybar)
+windowrulev2 = tile,title:^(Neovide)
 
 # Layer rules
 layerrule = blur,waybar
@@ -32,3 +33,6 @@ windowrulev2 = float,title:^(Burrito)$
 windowrulev2 = fakefullscreen,class:^(Burrito)$
 # windowrulev2 = maximize,title:^(Burrito)$
 # windowrulev2 = center 1,title:^(Burrito)$
+
+# Obsidian
+windowrulev2 = float,title:^(Obsidian)
