--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -1,6 +1,7 @@
 # Keybinds
 $mainMod = SUPER
 
+bind = $mainMod SHIFT, Return, exec, neovide
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exec, wlogout --protocol layer-shell
