--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -5,6 +5,9 @@ exec-once=/usr/lib/pam_kwallet_init
 exec-once=swayidle -w
 exec-once=dunst
 exec-once=swww init && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
-exec-once=kwalletd5 && ssh-add -q
+# exec-once=kwalletd5 && ssh-add -q
 exec-once=sleep 5; QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 exec-once=hyprctl dispatch workspace 1
+
+
+exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
