--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -2,12 +2,12 @@
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=/usr/lib/pam_kwallet_init
-# exec-once=swayidle -w
 exec-once=hypridle
+exec-once=hyprpaper
+exec-once=/home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
 exec-once=dunst
-# exec-once=swww init && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
-exec-once=hyprpaper && /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
-# exec-once=kwalletd5 && ssh-add -q
-exec-once=sleep 5; QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 exec-once=hyprctl dispatch workspace 1
+
+# Startup Applications
+exec-once=sleep 5; QT_QPA_PLATFORM=xcb /opt/piavpn/bin/pia-client
 exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
