feat: hyprpicker keybind in hyprland

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -57,3 +57,6 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = , XF86AudioRaiseVolume, exec, ~/.dotfiles/scripts/change_volume.sh increase
 bind = , XF86AudioLowerVolume, exec, ~/.dotfiles/scripts/change_volume.sh decrease
 bind = , XF86AudioMute, exec, ~/.dotfiles/scripts/change_volume.sh mute
+
+# Color Picker
+bind = $mainMod SHIFT, P, exec, hyprpicker -a
