feat: voyager dpi settings

--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -32,3 +32,4 @@ windowrulev2 = nofocus,class:^(Burrito)$
 windowrulev2 = fakefullscreen,class:^(Burrito)$
 # windowrulev2 = maximize,title:^(Burrito)$
 # windowrulev2 = center 1,title:^(Burrito)$
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar
