--- a/hypr/host/voyager.conf
+++ b/hypr/host/voyager.conf
@@ -1,5 +1,5 @@
 # Monitors
-monitor=eDP-1,highres,0x0,1.75
+monitor=eDP-1,highres,0x0,1.666667
 monitor=DP-1,highres,0x0,1
 
 # Workspaces
@@ -20,3 +20,4 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl -s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl -s 5%-
 
 exec-once=gammastep -l 56.6:14.3
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar --config ~/.dotfiles/waybar/config_voyager.jsonc
