chore: wayland fixes + bunch of neovim maintenance

--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -12,11 +12,13 @@ env = GTK_THEME,adw-gtk3-dark
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # Wayland
+env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland,x11
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # NVIDIA
 env = _JAVA_AWT_WM_NONREPARENTING=1
@@ -28,6 +30,5 @@ env = WLR_USE_LIBINPUT,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
 env = QT_QPA_PLATFORM,wayland
 env = WLR_DRM_NO_ATOMIC,1
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
