--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,3 +36,5 @@ windowrulev2 = fakefullscreen,class:^(Burrito)$
 
 # Obsidian
 windowrulev2 = float,title:^(Obsidian)
+
+#bind = SUPER, SUPER_L, overview:toggle
