feat: small laptop enchancements

--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -12,7 +12,7 @@ input {
 
     touchpad {
         natural_scroll = no
-        disable_while_typing = false
+        disable_while_typing = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
