--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .env
 hypr/host.conf
 nvim/lazy-lock.json
+
+streamcontroller/*
+!streamcontroller/settings/
+!streamcontroller/settings/*
+!streamcontroller/pages/
+!streamcontroller/pages/*
