feat: hypr theme changes

--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -3,12 +3,12 @@ env = XCURSOR_SIZE,24
 env = WLR_NO_HARDWARE_CURSORS,1
 
 # SSH
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
-env = SSH_ASKPASS=/usr/bin/ksshaskpass
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
+env = SSH_ASKPASS=/usr/bin/seahorse/ssh-askpass
 env = SSH_ASKPASS_REQUIRE=prefer
 
 # Theming
-env = GTK_THEME,adw-gtk3-dark
+env = GTK_THEME,catppuccin-mocha-peach-standard+default
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # Wayland
