--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-  lock_cmd = pidof hyprlock || hyprlock
+  lock_cmd = ~/.dotfiles/scripts/lock.sh
   before_sleep_cmd = loginctl lock-session
   after_sleep_cmd = hyprctl dispatch dpms on
 }
@@ -10,7 +10,7 @@ listener {
 }
 
 listener {
-  timeout = 600
+  timeout = 1200
   on-timeout = hyprctl dispatch dpms off
   on-resume = hyprctl dispatch dpms on
 }
