--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,9 @@
 # Environment variables
 source = ~/.config/hypr/env.conf
 
+# Colors
+source = ~/.config/hypr/colors.conf
+
 # Startup applications
 source = ~/.config/hypr/execs.conf
 
