--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
   monitor = DP-1
-  path = screenshot
+  path = /tmp/screenshot.png
 
   # blur_passes = 0
   # blur_size = 7
