--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -23,8 +23,8 @@ general {
     gaps_in = 4
     gaps_out = 10
     border_size = 2
-    col.active_border = rgba(e95420ee) rgba(e9a320ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $peach $yellow 45deg
+    col.inactive_border = $surface1
 
     layout = dwindle
     allow_tearing = true
@@ -53,7 +53,7 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
