--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -1,12 +1,12 @@
 # Monitors
 monitor=DP-1,highrr,0x0,1
-monitor=HDMI-A-1,highres,2560x-1000,1,transform,1
+monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
 monitor=DP-2,preferred,0x-1440,1
 
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
 exec-once=sleep 5; /usr/lib/kdeconnectd
-exec-once=sleep 5; streamdeck --no-ui
+# exec-once=sleep 5; streamdeck --no-ui
 exec-once=sleep 5; vorta
 
 # Workspaces
@@ -24,12 +24,20 @@ windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 # Move Spotify to Top Monitor
 windowrulev2 = monitor DP-2,title:^(Spotify)$
 
-# GW2 Burrito
-windowrulev2 = noblur,class:^(Burrito)$
-windowrulev2 = noborder,class:^(Burrito)$
-windowrulev2 = nofocus,class:^(Burrito)$
-# windowrulev2 = float,title:^(Burrito)$
-windowrulev2 = fakefullscreen,class:^(Burrito)$
-# windowrulev2 = maximize,title:^(Burrito)$
-# windowrulev2 = center 1,title:^(Burrito)$
+# Waybar
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar
+
+# GW2
+windowrulev2=float, title:^(Blish HUD)$
+windowrulev2=center, title:^(Blish HUD)$
+windowrulev2=nofocus, title:^(Blish HUD)$
+windowrulev2=noinitialfocus, title:^(Blish HUD)$
+windowrulev2=noborder, title:^(Blish HUD)$
+windowrulev2=pin, title:^(Blish HUD)$
+windowrulev2=opacity 0.2 0.1, title:^(Blish HUD)$
+# windowrulev2=workspace 2 silent, title:$(Blish HUD)$
+windowrulev2 = monitor DP-1, title:^(Blish HUD)$
+
+windowrulev2 = stayfocused, title:^(U)$
+windowrulev2 = forceinput, title:^(U)$
+
