feat: update host specific hyprland configurations

--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -6,8 +6,8 @@ monitor=DP-2,preferred,0x-1440,1
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
 exec-once=sleep 5; /usr/lib/kdeconnectd
-# exec-once=sleep 5; streamdeck --no-ui
-exec-once=sleep 5; vorta
+exec-once=sleep 5; streamcontroller -b
+exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
 
 # Workspaces
 workspace=name:1, monitor:DP-1, persistent:true, default:true
