--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -2,14 +2,12 @@
 exec-once=/usr/lib/polkit-gnome-authentication-agent-1
 exec-once=dbus-update-activation-environment --all
 # exec-once=gnome-keyring-daemon --start --components=secrets,ssh,pcks11
-# exec-once=/usr/lib/pam_kwallet_init
 exec-once=hypridle
 exec-once=hyprpaper
 exec-once=dunst
 exec-once=hyprctl dispatch workspace 1
+exec-once=sleep 5; vorta
 
 # Startup Applications
 exec-once=sleep 5; mullvad-vpn
-exec-once=sleep 5; streamcontroller -b
-exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
 exec-once=sleep 2; /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
