--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ streamcontroller/*
 !streamcontroller/settings/*
 !streamcontroller/pages/
 !streamcontroller/pages/*
+streamcontroller/pages/backups/*
 
 spicetify/*
 !spicetify/Themes/*
