--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["/home/tony/.config/alacritty/fonts.toml", "/home/tony/.config/alacritty/colors.toml", "/home/tony/.config/alacritty/mappings.toml"]
 
 [bell]
 animation = "EaseOutQuart"
@@ -21,7 +20,7 @@ TERM = "xterm-256color"
 history = 10000
 multiplier = 3
 
-[shell]
+[terminal.shell]
 args = ["new-session"]
 program = "/bin/tmux"
 
@@ -40,3 +39,8 @@ lines = 30
 [window.padding]
 x = 10
 y = 10
+
+[general]
+import = ["/home/tony/.config/alacritty/fonts.toml", "/home/tony/.config/alacritty/colors.toml", "/home/tony/.config/alacritty/mappings.toml"]
+
+[terminal]
