refactor: cleanup hypr configs

--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -28,7 +28,9 @@ env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
 env = WLR_USE_LIBINPUT,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
-env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORM,wayland;xcb
 env = WLR_DRM_NO_ATOMIC,1
-# env = LIBVA_DRIVER_NAME,nvidia
+
+# testing
+env = LIBVA_DRIVER_NAME,nvidia
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
