--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -18,6 +18,10 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+cursor {
+  no_hardware_cursors = true
+}
+
 # General Configuration
 general {
     gaps_in = 4
@@ -61,7 +65,7 @@ gestures {
 }
 
 misc {
-    no_direct_scanout = false
+    # no_direct_scanout = false
     # no_direct_scanout = true
     vfr=false
     vrr=2
