--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -24,20 +24,12 @@ windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 # Move Spotify to Top Monitor
 windowrulev2 = monitor DP-2,title:^(Spotify)$
 
+# Minecraft
+# windowrulev2 = center,title:
+
+# Android Emulator
+# windowrulev2 = float,title:^(Emulator)
+# windowrulev2 = center,title:^(Emulator)
+
 # Waybar
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar
-
-# GW2
-windowrulev2=float, title:^(Blish HUD)$
-windowrulev2=center, title:^(Blish HUD)$
-windowrulev2=nofocus, title:^(Blish HUD)$
-windowrulev2=noinitialfocus, title:^(Blish HUD)$
-windowrulev2=noborder, title:^(Blish HUD)$
-windowrulev2=pin, title:^(Blish HUD)$
-windowrulev2=opacity 0.2 0.1, title:^(Blish HUD)$
-# windowrulev2=workspace 2 silent, title:$(Blish HUD)$
-windowrulev2 = monitor DP-1, title:^(Blish HUD)$
-
-windowrulev2 = stayfocused, title:^(U)$
-windowrulev2 = forceinput, title:^(U)$
-
