chore: spicetify backup

--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -7,7 +7,7 @@ expose_apis        = 1
 [AdditionalOptions]
 extensions            = 
 custom_apps           = 
-sidebar_config        = 1
+sidebar_config        = 0
 home_config           = 1
 experimental_features = 1
 
@@ -28,5 +28,5 @@ always_enable_devtools = 0
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.42.290.g242057a2
-with    = 2.36.14
+version = 1.2.50.335.g5e2860a8
+with    = 2.38.4
